swagger2-application - spring boot 3, java 21 and swagger upgrade